[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/skills/aoe/AreaEffect.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 24.0

[node name="AreaEffect" type="Area2D"]
collision_layer = 1024
collision_mask = 62
script = ExtResource( 1 )

[node name="Radius" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]

[connection signal="body_entered" from="." to="." method="_on_AreaEffect_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_AreaEffect_body_exited"]
[connection signal="animation_finished" from="Sprite" to="." method="_on_AnimatedSprite_animation_finished"]
